<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<br.tbm.github.api.components.CustomMontserratRegularTextView
		android:id="@+id/search_activity_description_text_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:text="@string/search_activity_description"
		android:textColor="@color/light_grey"
		android:textSize="16sp"
		app:layout_constraintTop_toBottomOf="@+id/toolbar" />

	<android.support.design.widget.TextInputLayout
		android:id="@+id/search_activity_search_textlayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="20dp"
		app:layout_constraintTop_toBottomOf="@+id/search_activity_description_text_view">

		<br.tbm.github.api.components.CustomMontserratLightEditText
			android:id="@+id/search_activity_search_edittext"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:hint="@string/search_activity_search_edittext" />
	</android.support.design.widget.TextInputLayout>

	<br.tbm.github.api.components.CustomMontserratLightButton
		android:id="@+id/search_activity_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@drawable/button_background_black"
		android:text="@string/search_activity_button"
		android:textColor="@color/white"
		app:layout_constraintTop_toBottomOf="@+id/search_activity_search_textlayout" />

</android.support.constraint.ConstraintLayout>